Try to fix lan address reservation wrapping for some people (#1752)

--- a/files/app/resource/css/admin.css
+++ b/files/app/resource/css/admin.css
@@ -507,7 +507,6 @@ label.switch
 {
     display: flex;
     flex: 1 0 0%;
-    flex-wrap: wrap;
 }
 #ctrl-modal .adr > :last-child
 {
@@ -567,9 +566,10 @@ label.switch
 #ctrl-modal .reservation > div:first-child label
 {
     white-space: normal;
-    width: 40px;
+    width: 45px;
     align-self: center;
     text-align: center;
+    overflow: hidden;
 }
 #ctrl-modal .reservation input[type=checkbox],
 #ctrl-modal .dhcp-options input[type=checkbox]
